# MVP_AI_Chat

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
booking_bot/: database.py  main.py
booking_bot/adapters/: base.py  max_adapter.py  telegram_adapter.py  vk_adapter.py
booking_bot/core/: config.py  enums.py  exceptions.py  logging.py  message_bus.py
booking_bot/integrations/: ai_service.py  google_calendar.py
booking_bot/models/: __init__.py  booking.py  user.py
booking_bot/repositories/: booking_repo.py
booking_bot/services/: booking_service.py  review_service.py  state_service.py
booking_bot/utils/: validators.py
migrations/: env.py
tests/: conftest.py
tests/unit/: test_booking_service.py
