[tool.poetry]
name = "booking-bot"
version = "1.0.0"
description = "Multi-channel AI booking bot for HoReCa"
authors = ["AlSuBear <sahasipchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "booking_bot"}]  # ← ОБЯЗАТЕЛЬНО ДОБАВЬ ЭТУ СТРОКУ

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pydantic-settings = "^2.1"
aiogram = "^3.4"
vk-api = "^11.9.9"
aiohttp = "^3.9"
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.29"
redis = "^5.0"
google-api-python-client = "^2.115"
google-auth-oauthlib = "^1.2"
openai = "^1.12"
structlog = "^24.1"
apscheduler = "^3.10"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.2"
mypy = "^1.8"
black = "^24.1"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"